bug fix - multiple lines in release notes
Signed-off-by: Oren Cohen <ocohen@redhat.com>

--- a/release-notes/changelog.adoc
+++ b/release-notes/changelog.adoc
@@ -1,27 +1,90 @@
 # Changelog
 
+## v0.24.0
+
+Released on: Tue Dec 3 15:34:34 2019 +0100
+
+- CI: Support for Kubernetes 1.15
+- CI: Support for Kubernetes 1.16
+- Add and fix a couple of test cases
+- Support for pause and unpausing VMs
+- Update of libvirt to 5.6.0
+- Fix bug related to parallel scraping of Prometheus endpoints
+- Fix to reliably test VNC
+
+## v0.23.0
+
+Released on: Mon Nov 4 16:42:54 2019 +0100
+
+- Guest OS Information is available under the VMI status now
+- Updated to Go 1.12.8 and latest bazel
+- Updated go-yaml to v2.2.4, which has a ddos vulnerability fixed
+- Cleaned up and fixed CRD scheme registration
+- Several bugfixes
+- Many CI improvements (e.g. more logs in case of test failures)
+
+## v0.22.0
+
+Released on: Thu Oct 10 18:55:08 2019 +0200
+
+- Support for Nvidia GPUs and vGPUs exposed by Nvidia Kubevirt Device Plugin.
+- VMIs now successfully start if they get a 0xfe prefixed MAC address assigned from the pod network
+- Removed dependency on host semanage in SELinux Permissive mode
+- Some changes as result of entering the CNCF sandbox (DCO check, FOSSA check, best practice badge)
+- Many bug fixes and improvements in several areas
+- CI: Introduced a OKD 4 test lane
+- CI: Many improved tests, resulting in less flakyness
+
+## v0.21.0
+
+Released on: Mon Sep 9 09:59:08 2019 +0200
+
+- CI: Support for Kubernetes 1.14
+- Many bug fixes in several areas
+- Support for `virtctl migrate`
+- Support configurable number of controller threads
+- Support to opt-out of bridge binding for podnetwork
+- Support for OpenShift Prometheus monitoring
+- Support for setting more SMBIOS fields
+- Improved containerDisk memory usage and speed
+- Fix CRI-O memory limit
+- Drop spc_t from launcher
+- Add feature gates to security sensitive features
+
 ## v0.20.0
 
 Released on: Fri Aug 9 16:42:41 2019 +0200
 
 - Containerdisks are now secure and they are not copied anymore on every start.
+Old containerdisks can still be used in the same secure way, but new
+containerdisks can't be used on older kubevirt releases
 - Create specific SecurityContextConstraints on OKD instead of using the
+privileged SCC
 - Added clone authorization check for DataVolumes with PVC source
 - The sidecar feature is feature-gated now
 - Use container image shasums instead of tags for KubeVirt deployments
 - Protect control plane components against voluntary evictions with a
+PodDisruptionBudget of MinAvailable=1
 - Replaced hardcoded `virtctl` by using the basename of the call, this enables
+nicer output when installed via krew plugin package manager
 - Added RNG device to all Fedora VMs in tests and examples (newer kernels might
+block bootimg while waiting for entropy)
 - The virtual memory is now set to match the memory limit, if memory limit is
+specified and guest memory is not
 - Support nftable for CoreOS
 - Added a block-volume flag to the virtctl image-upload command
 - Improved virtctl console/vnc data flow
 - Removed DataVolumes feature gate in favor of auto-detecting CDI support
 - Removed SR-IOV feature gate, it is enabled by default now
 - VMI-related metrics have been renamed from `kubevirt_vm_` to `kubevirt_vmi_`
+to better reflect their purpose
 - Added metric to report the VMI count
 - Improved integration with HCO by adding a CSV generator tool and modified
+KubeVirt CR conditions
 - CI Improvements:
+  - Added dedicated SR-IOV test lane
+  - Improved log gathering
+  - Reduced amount of flaky tests
 
 ## v0.19.0
 
@@ -33,6 +96,7 @@ Released on: Fri Jul 5 12:52:16 2019 +0200
 - Many additional bug fixes in many areas
 - Additional testcases for updates, disk types, live migration with NFS
 - Additional testcases for memory over-commit, block storage, cpu manager,
+headless mode
 - Improvements around HyperV
 - Improved error handling for runStartegies
 - Improved update procedure
@@ -216,6 +280,7 @@ Released on: Thu Sep 6 14:25:22 2018 +0200
 - Race detection in tests
 - Hook improvements
 - Update to use Fedora 28 (includes updates of dependencies like libvirt and
+  qemu)
 - Move CI to support Kubernetes 1.11
 
 ## v0.7.0
@@ -329,5 +394,8 @@ Released on: Fri Dec 8 20:43:06 2017 +0100
 - Many API improvements for a proper OpenAPI reference
 - Add watchdog support
 - Drastically improve the deployment on non-vagrant setups
+  - Dropped nodeSelectors
+  - Separated inner component deployment from edge component deployment
+  - Created separate manifests for developer, test, and release deployments
 - Moved komponents to kube-system namespace
 - Improved and unified flag parsing
