--- a/administration/intro.adoc
+++ b/administration/intro.adoc
@@ -23,13 +23,23 @@ Kubernetes 1.10 or later is required to run KubeVirt.
 
 In addition it can be that feature gates need to be opened.
 
+Cluster Configuration
+^^^^^^^^^^^^^^^^^^^^^
+
+The Kubernetes apiserver needs to be configured to allow privileged pods since
+we run a privileged Daemon Set on every node. The required flag is
+`--allow-privileged=true`.
+
 Runtime
 +++++++
 
-KubeVirt is currently support on the following container runtimes:
+KubeVirt is currently supported on the following container runtimes:
 
 * docker
 * crio (with runv)
+
+Other container runtimes, which do not use virtualization features, should work
+too. However, they are not tested.
 
 Virtualization support
 ^^^^^^^^^^^^^^^^^^^^^^
@@ -301,18 +311,25 @@ See https://github.com/kubevirt/kubevirt/issues/2533[this issue for more details
 Delete
 ~~~~~~
 
-To delete the KubeVirt you should first to delete `KubeVirt` custom resource and then delete the KubeVirt operator:
+To delete the KubeVirt you should first to delete `KubeVirt` custom resource and then delete the KubeVirt operator.
 
 [source,bash]
 ----
 $ export RELEASE=v0.17.0
-$ kubectl delete -f https://github.com/kubevirt/kubevirt/releases/download/${RELEASE}/kubevirt-cr.yaml
-$ kubectl delete -f https://github.com/kubevirt/kubevirt/releases/download/${RELEASE}/kubevirt-operator.yaml
+$ kubectl delete -n kubevirt kubevirt kubevirt --wait=true # --wait=true should anyway be default
+$ kubectl delete apiservices v1alpha3.subresources.kubevirt.io # this needs to be deleted to avoid stuck terminating namespaces
+$ kubectl delete mutatingwebhookconfigurations virt-api-mutator # not blocking but would be left over
+$ kubectl delete validatingwebhookconfigurations virt-api-validator # not blocking but would be left over
+$ kubectl delete -f https://github.com/kubevirt/kubevirt/releases/download/${RELEASE}/kubevirt-operator.yaml --wait=false
 ----
 
 ______________________________________________________________________________________________________________________________________________________
-Note: If by mistake you deleted the operator first, the KV custom resource will stuck in the `Terminating` state,
-to fix it, delete manually finalizer from the resource.
+Note: If by mistake you deleted the operator first, the KV custom resource will
+get stuck in the `Terminating` state, to fix it, delete manually finalizer from
+the resource.
+
+Note: The `apiservice` and the `webhookconfigurations` need to be deleted manually
+due to a bug.
 
 [source,bash]
 ----
