--- a/release-notes/changelog.adoc
+++ b/release-notes/changelog.adoc
@@ -1,5 +1,29 @@
 # Changelog
 
+## v0.26.0
+
+Released on: Fri Feb 7 09:40:07 2020 +0100
+
+- Fix incorrect ownerReferences to avoid VMs getting GCed
+- Fixes for several tests
+- Fix greedy permissions around Secrets by delegating them to kubelet
+- Fix OOM infra pod by increasing it's memory request
+- Clarify device support around live migrations
+- Support for an uninstall strategy to protect workloads during uninstallation
+- Support for more prometheus metrics and alert rules
+- Support for testing SRIOV connectivity in functional tests
+- Update Kubernetes client-go to 1.16.4
+- FOSSA fixes and status
+
+## v0.25.0
+
+Released on: Mon Jan 13 20:37:15 2020 +0100
+
+- CI: Support for Kubernetes 1.17
+- Support emulator thread pinning
+- Support virtctl restart --force
+- Support virtctl migrate to trigger live migrations from the CLI
+
 ## v0.24.0
 
 Released on: Tue Dec 3 15:34:34 2019 +0100
