Clarify installatin headers around hardware/emulation virtualization
Signed-off-by: David Vossel <davidvossel@gmail.com>

--- a/administration/intro.adoc
+++ b/administration/intro.adoc
@@ -41,11 +41,8 @@ KubeVirt is currently supported on the following container runtimes:
 Other container runtimes, which do not use virtualization features, should work
 too. However, they are not tested.
 
-Virtualization support
+Validating Hardware Virtualization support
 ^^^^^^^^^^^^^^^^^^^^^^
-
-There are several distributions of Kubernetes, you need to decide on one
-and deploy it.
 
 Hardware with virtualization support is recommended. You can use
 virt-host-validate to ensure that your hosts are capable of running
@@ -62,7 +59,7 @@ $ virt-host-validate qemu
 ...
 ----
 
-Software emulation
+Enabling Software emulation
 ++++++++++++++++++
 
 If hardware virtualization is not available, then a
