Clarify that virtctl isn't a deployment, but a client tool
Signed-off-by: David Vossel <davidvossel@gmail.com>

--- a/administration/intro.adoc
+++ b/administration/intro.adoc
@@ -102,7 +102,7 @@ You can find more about hugepages under
 https://www.kernel.org/doc/Documentation/vm/hugetlbpage.txt[official
 documentation].
 
-Cluster side add-on deployment
+Deploying KubeVirt on Kubernetes
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 Core components
@@ -170,7 +170,7 @@ No additional steps are required to extend OKD's web console for KubeVirt.
 
 The virtualization extension is automatically enabled when KubeVirt deployment is detected.
 
-Client side `virtctl` deployment
+Installing `virtctl` client tooling
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 Basic VirtualMachineInstance operations can be performed with the stock
