Update instructions to the latest CDI
Signed-off-by: Maya Rashish <mrashish@redhat.com>

--- a/administration/image-upload.adoc
+++ b/administration/image-upload.adoc
@@ -21,13 +21,13 @@ Install CDI
 
 Install the latest CDI release
 https://github.com/kubevirt/containerized-data-importer/releases[here]
-(currently v1.8.0)
+(currently v1.13.0)
 
 [source,bash]
 ----
-VERSION=v1.8.0
+VERSION=v1.13.0
 kubectl create -f https://github.com/kubevirt/containerized-data-importer/releases/download/$VERSION/cdi-operator.yaml
-kubectl create -f https://github.com/kubevirt/containerized-data-importer/releases/download/$VERSION/cdi-operator-cr.yaml
+kubectl create -f https://github.com/kubevirt/containerized-data-importer/releases/download/$VERSION/cdi-cr.yaml
 ----
 
 Expose cdi-uploadproxy service
